@@ -6,6 +6,7 @@ A.F....... [ZBX-1357] updated Polish, Russian and Slovak translations; thanks to
 ..F....... [ZBX-8113] setup now stores info in session instead of cookies (Andrejs)
 
 Bug fixes:
+....I..... [ZBX-8306] added Percona database support when compiling with --with-mysql configuration option (wiper)
 .......PS. [ZBX-8287] truncate long text values to maximum field length before inserting into database (Andris)
 ........S. [ZBX-3163] fixed trigger evaluation order so that it takes dependencies into account (asaveljevs)
 A.F....... [ZBX-7373] improved performance of latest data and item overview pages by taking data for limited period only (Pavels)
